# cadmu

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  codecov.yml  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  coverage.yml  release-drafter.yml
docs/: AUTOMATION.md  CONTRIBUTOR_GUIDE.md  INDEX.md  ISSUE_CATALOG.md  REFERENCE.md  ROADMAP.md  SOLUTIONS.md  STUDY_GUIDE.md  SUMMARY.md  USAGE.md  _config.yml  index.md
docs/assets/css/: style.scss
src/cadmu/: __init__.py  cli.py
src/cadmu/core/: reporting.py  runner.py  system.py  table.py
src/cadmu/modules/arch/: __init__.py  pacman.py
src/cadmu/modules/audit/: base.py
src/cadmu/modules/cleaning/: base.py
src/cadmu/modules/diagnostics/: arch.py  base.py  dependencies.py
src/cadmu/modules/maintenance/: base.py
src/cadmu/modules/updating/: base.py
tests/: test_arch_pacman.py  test_cli_e2e.py  test_cli_full_workflow.py  test_system.py  test_table.py
